# t-short-assistant

./: .env.example  .gitignore  CHANGELOG.txt  README.txt  chainlit_app.py  pyproject.toml  requirements.txt  run.py  run_api.py
api-website/_build/html/salesgpt/: salesgpt.version.html
examples/: FAQ.txt  t_short_agent_setup.json  t_short_full_catalog.txt  t_short_id_mapping.json
salesgpt/: agents.py  chains.py  parsers.py  prompts.py  temp.py  texm.txt  tools.py
